RESOLVED FIXED85782
[CG] Separate image encoding from dataURL construction
https://bugs.webkit.org/show_bug.cgi?id=85782
Summary [CG] Separate image encoding from dataURL construction
noel gordon
Reported 2012-05-07 02:08:53 PDT
[CG] Separate image encoding from dataURL construction
Attachments
Patch (3.80 KB, patch)
2012-05-07 02:09 PDT, noel gordon
no flags
Patch for landing (3.85 KB, patch)
2012-05-07 14:36 PDT, noel gordon
no flags
noel gordon
Comment 1 2012-05-07 02:09:48 PDT
Kenneth Russell
Comment 2 2012-05-07 13:13:48 PDT
Comment on attachment 140495 [details] Patch Looks good to me.
WebKit Review Bot
Comment 3 2012-05-07 13:24:10 PDT
Comment on attachment 140495 [details] Patch Rejecting attachment 140495 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12643420
noel gordon
Comment 4 2012-05-07 14:36:45 PDT
Created attachment 140593 [details] Patch for landing
WebKit Review Bot
Comment 5 2012-05-07 16:05:26 PDT
Comment on attachment 140593 [details] Patch for landing Clearing flags on attachment: 140593 Committed r116364: <http://trac.webkit.org/changeset/116364>
WebKit Review Bot
Comment 6 2012-05-07 16:05:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.