[CG] Separate image encoding from dataURL construction https://bugs.webkit.org/show_bug.cgi?id=85782

Reviewed by Kenneth Russell.

Remove the implicit assumption that a dataURL is the only desired output format
of the image encoding phase.

No new tests. No behavioral change. Covered by canvas 2d and 3d tests:
    canvas/philip/tests/*toDataURL*.html
    fast/canvas/webgl/premultiplyalpha-test.html

* platform/graphics/cg/ImageBufferCG.cpp:
(WebCore::CGImageEncodeToData): Image encoding helper: encode the image using the
uti-defined encoder (PNG/JPEG/etc) and output to the given CFMutableDataRef data.
(WebCore):
(WebCore::CGImageToDataURL): Refactor to use CGImageEncodeToData().


Canonical link: https://commits.webkit.org/103421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116364 268f45cc-cd09-0410-ab3c-d52691b4dbfc